# dagster-colombia-skill

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pytest.ini
.claude/skills/colombia-open-data/: SKILL.md
.claude/skills/colombia-open-data/references/: soql.md
.claude/skills/colombia-open-data/scripts/: cli.py  render.py  socrata.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  nueva-tarea.md  reporte-error.md
.github/workflows/: ci.yml
contrib/: README.md
contrib/_template/: etl.py  test_etl.py
docs/: colab_taller.ipynb
docs/slides/: README.md  guion-facil.es.md  guion.es.md  index.html  serve.sh  slides.en.md  slides.es.md  theme.css
docs/slides/assets/: manifest.json
docs/slides/assets/fonts/: README.md
docs/slides/tools/: activity-html-output.html  make_placeholders.py
pipeline/: pyproject.toml  requirements.txt
pipeline/colombia_pipeline/: __init__.py  acquisition.py  assets.py  config.py  definitions.py
pipeline/tests/: test_dane.py  test_live.py  test_pipeline.py  test_render.py  test_socrata.py
pipeline/tests/cassettes/test_socrata/: test_columns_are_all_text.yaml  test_count_rows_is_over_a_million.yaml  test_discover_finds_the_internet_dataset.yaml  test_query_by_year_returns_typed_aggregate.yaml
scripts/: smoke.py
skill/colombia-open-data/: SKILL.md
skill/colombia-open-data/scripts/: cli.py  dane.py
web/: package-lock.json  package.json
web/app/: AccessChart.tsx  globals.css  layout.tsx  page.tsx
web/public/data/: by_department.json  by_year.json  meta.json
(+1 files in other folders)
